// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cond.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<%= cond do %>
<% ee -> %>
ede
  <% true -> %>
    <div>dsd</div>
<% end %>

=====================================output=====================================
<%= cond do %>
  <% ee -> %>
    ede
  <% true -> %>
    <div>dsd</div>
<% end %>

================================================================================
`;

exports[`cond_html.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<%= cond do %>
<% ee -> %>
ede
  <% true -> %>
    <div>dsd</div>
<% end %>

</div>
<span>
<%= cond do %>
<% ee -> %>
ede
  <% true -> %>
    <div>dsd</div>
<% end %>

</span>

<div>
<%= cond do %>
<% ee -> %>
ede
  <% true -> %>
    <div>
    dsd
    </div>
<% end %>
</div>

=====================================output=====================================
<div>
  <%= cond do %>
    <% ee -> %>
      ede
    <% true -> %>
      <div>dsd</div>
  <% end %>
</div>
<span>
  <%= cond do %>
    <% ee -> %>
      ede
    <% true -> %>
      <div>dsd</div>
  <% end %>
</span>

<div>
  <%= cond do %>
    <% ee -> %>
      ede
    <% true -> %>
      <div>dsd</div>
  <% end %>
</div>

================================================================================
`;
